[package]
authors = ["Robyn Ffrancon <robyn.ffrancon@protonmail.com>"]
name = "py-crev-lib"
version = "0.1.0"
edition = "2018"

[lib]
name = "py_crev_ib"
crate-type = ["cdylib"]

[dependencies]
crev-lib = { git = "https://github.com/crev-dev/cargo-crev.git", rev = "2cff30fb9165d7048b2667e0f10cadeeb7e8b438" }
rayon = "1.0.2"
pyo3 = "0.9.2"
anyhow = "1.0.31"
thiserror = "1.0.17"
