[package]
authors = ["Robyn Ffrancon <robyn.ffrancon@protonmail.com>"]
name = "py-crev-lib"
version = "0.1.0"
edition = "2018"

[lib]
name = "py_crev_ib"
crate-type = ["cdylib"]

[dependencies]
crev-common = { git = "https://github.com/crev-dev/cargo-crev.git", rev = "93591a23b0ae9570f44838b9709521d9a48743e0" }
crev-data = { git = "https://github.com/crev-dev/cargo-crev.git", rev = "93591a23b0ae9570f44838b9709521d9a48743e0" }
crev-lib = { git = "https://github.com/crev-dev/cargo-crev.git", rev = "93591a23b0ae9570f44838b9709521d9a48743e0" }
rayon = "1.0.2"
pyo3 = "0.9.2"
anyhow = "1.0.31"
thiserror = "1.0.17"
rprompt = "1.0.5"
semver = "0.9.0"
tempdir = "0.3.7"
git2 = "0.13.5"
serde_yaml = "0.8.11"
